style: change image extension

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="author" content="Steven" />
     <meta property="og:title" content="Steven's Portfolio" />
     <meta property="og:description" content="A passionate Software Engineer that enthusiastic at challenges. Who trust zero become hero is real." />
-    <meta property="og:image" content="/stvn-og.png" />
+    <meta property="og:image" content="/stvn-og.jpg" />
     <meta property="og:url" content="https://stevenaruu.vercel.app/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Steven's Portfolio" />
     <meta name="twitter:description" content="A passionate Software Engineer that enthusiastic at challenges. Who trust zero become hero is real." />
-    <meta name="twitter:image" content="/stvn-og.png" />
+    <meta name="twitter:image" content="/stvn-og.jpg" />
     <meta name="twitter:creator" content="@stevenaruu" />
     <title>Steven's Portofolio</title>
   </head>
