feat: add google-site-verification meta

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:description" content="A passionate Software Engineer that enthusiastic at challenges. Who trust zero become hero is real." />
     <meta name="twitter:image" content="/stvn-og.jpg" />
     <meta name="twitter:creator" content="@stevenaruu" />
+    <meta name="google-site-verification" content="JHBIXS1gQO1OGsJHromF-vEq8HCT3WaUZ7Dp9CUFzd8" />
     <title>Steven's Portofolio</title>
   </head>
   <body>
