feat: add meta keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/stvn-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A passionate Software Engineer that enthusiastic at challenges. Who trust zero become hero is real." />
+    <meta name="keywords" content="Software Engineer, Web Developer, Full Stack Developer, Programming, JavaScript, TypeScript, React, Next.js, Portfolio, Coding, Software Development, Tech Enthusiast, Steven, stevenaruu, Forsythia, Steven Forsythia">
     <meta name="author" content="Steven" />
     <meta property="og:title" content="Steven's Portfolio" />
     <meta property="og:description" content="A passionate Software Engineer that enthusiastic at challenges. Who trust zero become hero is real." />
